@@ -1,6 +1,8 @@
 Revision history for Perl extension PGXN-Meta-Validator.
 
 0.15.0
+      - Added `version_string` class method and made use of it in the
+        `validate_pgxn_meta` script.
 
 0.14.0  2011-08-31T03:44:57Z
       - Added tests to protect against autovivication of keys.
